@@ -1,5 +1,6 @@
 From ucommon 1.9.5 to 1.9.6
 - better address list management, including unique insert and remove.
+- copy constructor and address duplication for Socket::address.
 
 From ucommon 1.9.4 to 1.9.5
 - mutex::gaurd for scope mutex locking arbitrary objects.
